# aoc-2025

./: .gitignore  Cargo.toml  README.md
day1/: Cargo.toml
day1-1/: Cargo.toml
day1-1/src/: main.rs  safe.rs
day1-2/: Cargo.toml
day1-2/src/: main.rs
day1/src/: lib.rs  part_1.rs  part_2.rs
day2/: Cargo.toml
day2-1/: Cargo.toml
day2-1/src/: main.rs
day2-2/: Cargo.toml
day2-2/src/: main.rs
day2/src/: lib.rs  part_1.rs  part_2.rs
day3/: Cargo.toml
day3-1/: Cargo.toml
day3-1/src/: main.rs
day3-2/: Cargo.toml
day3-2/src/: main.rs
day3/src/: lib.rs  part_1.rs  part_2.rs
day4/: Cargo.toml
day4-1/: Cargo.toml
day4-1/src/: main.rs
day4/src/: grid.rs  lib.rs  paper_storage.rs  part_1.rs  part_2.rs
day5/: Cargo.toml
day5/src/: lib.rs  part_1.rs  part_2.rs
day6/: Cargo.toml
day6/src/: lib.rs  part_1.rs  part_2.rs
day7/: Cargo.toml
day7/src/: lib.rs  part_1.rs  part_2.rs
scripts/: new_day.sh
util/: Cargo.toml
util/src/: aoc.rs  cli.rs  lib.rs  range.rs  runner.rs
