[package]
name = "day1"
version = "0.1.0"
edition = "2024"

[lib]
name = "day1"
path = "src/lib.rs"

[[bin]]
name = "day1-1"
path = "src/part_1.rs"

[[bin]]
name = "day1-2"
path = "src/part_2.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
