[package]
name = "day2"
version = "0.1.0"
edition = "2024"

[lib]
name = "day2"
path = "src/lib.rs"

[[bin]]
name = "day2-1"
path = "src/part_1.rs"

[[bin]]
name = "day2-2"
path = "src/part_2.rs"

[dependencies]
util = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
