[package]
name = "day3"
version = "0.1.0"
edition = "2024"

[lib]
name = "day3"
path = "src/lib.rs"

[[bin]]
name = "day3-1"
path = "src/part_1.rs"

[[bin]]
name = "day3-2"
path = "src/part_2.rs"

[dependencies]
util = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
