[package]
name = "util"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12.28", features = ["rustls-tls", "blocking", "cookies", "multipart"] }
